--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,29 +1,67 @@
-name: Deploy
+name: Counter App CI
 
-on: [workflow_dispatch]
+on:
+  push:
+    branches: [ "main" ]
+    
 
 jobs:
-  deploy:
+  build:
+
     runs-on: ubuntu-latest
-    steps:
-      - name: Git Checkout
-        uses: actions/checkout@v2
 
-      - name: Yarn Cache
-        uses: c-hive/gha-yarn-cache@v1
+    steps: 
+    - name: Checkout repository 
+      uses: actions/checkout@v2 
+      
+    - name: Set up Node.js 
+      uses: actions/setup-node@v2 
+      with:
+        node-version: '14' # specify your Node.js version 
+        
+    - name: Install dependencies 
+      run: yarn install 
+      
+    - name: Build project 
+      run: yarn run build # or your specific build command
+    
 
-      - name: Install dependencies
-        run: yarn
+    - run: tar -czf build.tar.gz build
 
-      - name: Build React App
-        run: yarn build
-        env:
-          HTTPS: 'true'
-          REACT_APP_BASE_URL: ${{ secrets.REACT_APP_BASE_URL }}
-          PUBLIC_URL: ${{ secrets.PUBLIC_URL }}
+    - name: Upload build Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: build-artifact
+        path: build.tar.gz
 
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps: 
+      - name: Checkout repository
+        uses: actions/Checkout@v4
+
+      - name: Download build artifact
+        uses: actions/download-artifact@v4
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build
+          name: build-artifact
+          path: build/
+
+      - name: Deploy via SSH 
+        env: 
+          SSH_PRIVATE_KEY: ${{secrets.SSH_KEY}}
+        run:
+          mkdir -p ~/.ssh
+          echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-add ~/.ssh/id_rsa
+          ssh-keyscan -H ${{secrets.SSH_HOST}} >> ~/.ssh/known_hosts
+          
+          scp -i ~/.ssh/id_rsa -P ${{secrets.SSH_PORT}} build/build.tar.gz ${{secrets.SSH_USER}}@${{secrets.SSH_HOST}}
+
+          ssh -i ~/.ssh/id_rsa -p ${{secrets.SSH_PORT}} ${{secrets.SSH_USER}}@${{secrets.SSH_HOST}} <<'EOF'
+            cd /var/www/html
+            tar -xzf build.tar.gz
+          EOF
