--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,9 +21,11 @@ jobs:
         
     - name: Install dependencies
       run: npm install --global yarn
+    - name: python
+      run: sudo yum install python2
 
     - name: Install dependencies
-      run: yarn install 
+      run: yarn install
       
     - name: Build project 
       run: yarn run build # or your specific build command
